# vapoursynth-plugins

./: .gitignore  .gitmodules  COPYING  GNUmakefile  Makefile  Makefile.am  Makefile.in  README  README.md  autogen.sh  cc.inc  config.mak.in  configure  configure.ac  configure.sh  copyright  cxx.inc  cxx_cc.inc  deinit-git-submodule.sh  ffmpeg.mak  global.inc
bifrost/: Makefile  Makefile.am  configure.ac
combmask/: Makefile  Makefile.am  configure.ac
combmask/avisynth/: CombMask.cpp  CombMask.sln  CombMask.vcxproj  CombMask.vcxproj.filters  avisynth.h  readme.txt
combmask/src/: combmask.h  horizontal_dilation.c  merge_frames.c
combmask/vapoursynth/src/: GNUmakefile  VapourSynth.h  adapt_motion.c  configure  write_combmask.c
d2vsource/: GNUmakefile  Makefile  Makefile.am  README  configure  configure.ac
d2vsource/core/: compat.cpp  decode.hpp
d2vsource/src/: compat.hpp  d2v.cpp  d2v.hpp  d2vsource.cpp  decode.cpp  directrender.cpp  directrender.hpp  gop.hpp  libavversion.h  libavversion.hpp  vapoursynth.cpp
d2vsource/vs/: applyrff.cpp  applyrff.hpp  d2vsource.hpp
damb/: Makefile  Makefile.am  readme.rst
damb/src/: damb.cpp  shared.h  write.cpp
fillborders/: Makefile  Makefile.am  configure.ac  readme.rst
fillborders/src/: fillborders.c
flash3kyuu_deband/: Makefile  Makefile.am  flash3kyuu_deband.zh.txt  waf  wscript
flash3kyuu_deband/include/: f3kdb.h
flash3kyuu_deband/src/: auto_utils.h  compiler_compat.h  core.h  debug_dump.cpp  debug_dump.h  flash3kyuu_deband_impl_c.cpp  flash3kyuu_deband_impl_ssse3.cpp  flash3kyuu_deband_sse_base.h  gen_filter_def.py  icc_override.h  impl_dispatch.cpp  impl_dispatch.h  pixel_proc_c.h  pixel_proc_c_16bit.h  presets.h  process_plane_context.h  random.cpp  random.h  sse_utils.h  stdafx.cpp  stdafx.h  utils.h  wscript
flash3kyuu_deband/src/avisynth/: avisynth.h  avisynth_plugin.hpp  avisynth_plugin_legacy_26.cpp  avisynth_plugin_v5.cpp  check.hpp  filter.h  filter_impl.hpp  flash3kyuu_deband.def.h  mt_info.hpp  stdafx.h
flash3kyuu_deband/src/include/: f3kdb.h  f3kdb_params.h
flash3kyuu_deband/src/vapoursynth/: plugin.cpp
flash3kyuu_deband/test/: build_core_param_set.py  gtest_stub.h  stdafx.cpp  stdafx.h  test_core.cpp  test_core_param_set.h.xz  test_params_from_string.cpp  wscript
flash3kyuu_deband/test/case_frames/: wallorig_320x180_1_1_1_10.yuv.xz  wallorig_320x180_1_1_2_10.yuv.xz  wallorig_320x180_1_1_2_16.yuv.xz  wallorig_640x360_1_1_0_8.yuv.xz  wallorignoise_320x180_1_1_1_16.yuv.xz
fluxsmooth/: Makefile  Makefile.am  configure.ac  readme.rst
fluxsmooth/src/: fluxsmooth.c
fmtconv/: Makefile  Makefile.am  README.md
fmtconv/doc/: fmtconv.html  vapourdoc.css
fmtconv/src/: AvstpFinder.cpp  AvstpFinder.h  AvstpWrapper.cpp  AvstpWrapper.h  avstp.h  main.cpp  types.h
fmtconv/src/conc/: AioAdd.h  AioAdd.hpp  AioMax.h  AioMax.hpp  AioSub.h  AioSub.hpp  Array.h  Array.hpp  AtomicInt.h  AtomicInt.hpp  AtomicIntOp.h  AtomicIntOp.hpp  AtomicMem.h  AtomicMem.hpp  AtomicPtr.h  AtomicPtr.hpp  AtomicPtrIntPair.h  AtomicPtrIntPair.hpp  CellPool.h  CellPool.hpp  Interlocked.h  Interlocked.hpp  LockFreeCell.h  LockFreeQueue.h  LockFreeQueue.hpp  LockFreeStack.h  LockFreeStack.hpp  ObjFactoryDef.h  ObjFactoryDef.hpp  ObjFactoryInterface.h  ObjFactoryInterface.hpp  ObjPool.h  ObjPool.hpp  def.h  fnc.h  fnc.hpp
fmtconv/src/ffft/: DynArray.h  DynArray.hpp  FFTReal-readme.txt
fmtconv/src/fmtc/: ArrayAlign.h  ArrayAlign.hpp  Bitdepth.cpp  Bitdepth.h  ConvStep.cpp  ConvStep.h  Convert.cpp  Convert.h  Matrix.cpp  Matrix.h  Matrix2020CL.cpp  Matrix2020CL.h  Matrix_avx.cpp  Matrix_avx2.cpp  NativeToStack16.cpp  NativeToStack16.h  Resample.cpp  Resample.h  SplFmtUtl.h  SplFmtUtl.hpp  Stack16ToNative.cpp  Stack16ToNative.h  Transfer.cpp  Transfer.h  Transfer.hpp  Transfer_avx2.cpp  version.h
fmtconv/src/fmtcl/: BitBltConv.cpp  BitBltConv.h  BitBltConv_avx2.cpp  CoefArrInt.cpp  (+73 more)
genericfilters/: .gitignore  Makefile  Makefile.am  configure.ac
genericfilters/alone/: alone.c  binarize.c  invert.c  levels.c  limiter.c
genericfilters/common/: VapourSynth.h  common.h
genericfilters/convolution/: canny.c  canny.h  convolution_hv.c  edge_detect_canny.c  float_to_dst.c  gaussian_blur.c  proc_hv.c  xxflate.h
genericfilters/neighbors/: median.c  minimum.c
genericfilters/src/: GNUmakefile  configure
histogram/: .gitignore  Makefile  Makefile.am  README  configure.ac
histogram/src/: classic.c  classic.h  color.h  common.h  levels.h  luma.c  luma.h
imagereader/: Makefile  Makefile.am  imagereader.mk
imagereader/libjpeg-turbo/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
imagereader/src/: Makefile.am  bmp.c  imagereader.c  imagereader.h  jpeg.c  png.c  tga.c
it/: Makefile  Makefile.am  README.md
it/src/: IScriptEnvironment.h  vs_it.cpp  vs_it.h  vs_it_c.cpp  vs_it_interface.cpp  vs_it_process.cpp
lsmashsource/: Makefile  Makefile.am  lsmashsource.mk
lsmashsource/lsmash/: VERSION  configure
msmoosh/: Makefile.am  configure.ac
msmoosh/src/: msmoosh.cpp
mvtools/: Makefile  Makefile.am  configure.ac
nnedi3/: Makefile  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
nnedi3/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
nnedi3/src/: nnedi3.c
rawsource/: .gitignore  GNUmakefile  Makefile  Makefile.am  VapourSynth.h  configure  configure.ac  format_list.txt  rawsource.h  readme.rst
rawsource/src/: rawsource.c
scrawl/: Makefile  Makefile.am  configure.ac  ofl.txt
ssiq/: Makefile  Makefile.am  configure.ac  readme.rst
tcomb/: .gitignore  Makefile  Makefile.am  configure.ac  readme.rst
tcomb/src/: tcomb.c
temporalsoften/: Makefile  Makefile.am  configure.ac
vautodeint/: Makefile  Makefile.am  configure.ac
vautodeint/externalfilters/: VapourSynth.h  externalfilters.sln  externalfilters.vcxproj  externalfilters.vcxproj.filters
vautodeint/src/: IsCombedTIVTCport.c  PlaneDifferenceFromPrevious.c  PluginInit.c  PluginInit.cpp
videoscope/: Makefile  Makefile.am  configure.ac  readme.rst
zimg/: Makefile  Makefile.am
(+711 files in other folders)
