ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
	addgrain \
	bifrost \
	bilateral \
	combmask \
	convo2d \
	ctmf \
	d2vsource \
	deblock \
	delogo \
	eedi2 \
	fieldhint \
	fillborders \
	fluxsmooth \
	genericfilters \
	histogram \
	imagereader \
	imagereader/src \
	it \
	msmoosh \
	mvtools \
	nnedi3 \
	rawsource \
	retinex \
	sangnommod \
	scenechange \
	scrawl \
	scxvid \
	ssiq \
	tcomb \
	tdeintmod \
	templinearapproximate \
	temporalsoften \
	temporalsoften2 \
	vautodeint \
	videoscope \
	wwxd \
	yadifmod \
	zimg
