ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
	addgrain \
	bifrost \
	bilateral \
	combmask \
	convo2d \
	ctmf \
	d2vsource \
	damb \
	dctfilter \
	deblock \
	delogo \
	dfttest \
	eedi2 \
	fieldhint \
	fillborders \
	flash3kyuu_deband \
	fluxsmooth \
	genericfilters \
	histogram \
	imagereader \
	imagereader/src \
	it \
	msmoosh \
	mvtools \
	nnedi3 \
	rawsource \
	retinex \
	sangnommod \
	scenechange \
	scrawl \
	scxvid \
	ssiq \
	tcomb \
	tdeintmod \
	templinearapproximate \
	temporalsoften \
	temporalsoften2 \
	vaguedenoiser \
	vautodeint \
	videoscope \
	wwxd \
	yadifmod \
	zimg
